Introduce PostScript (section 2).

--- a/paper.tex
+++ b/paper.tex
@@ -19,6 +19,7 @@
 % makes sure that there is no comma after e.g. or i.e.
 \usepackage[all,british]{foreign}
 
+\usepackage{epsf}
 
 \usepackage{mathpartir}
 
@@ -273,10 +274,8 @@ embedding, how to specify a program, and most importantly, program extraction.
 
 % Agda Basics and Extraction
 \input{latex/background}
+\input{latex/psembedding}
 
-% PostScript Language and its embedding
-\section{PostScript and its embedding in Agda}
-Demonstrate a few examples.
 
 \section{Extraction}
 \subsection{Framework Overview}
