--- a/paper.tex
+++ b/paper.tex
@@ -104,25 +104,29 @@
 %% Note: \begin{abstract}...\end{abstract} environment must come
 %% before \maketitle command
 \begin{abstract}
-  This paper proposes a novel tecnhique to write correct by construction
-  programs in languages that do not have built-in verification
+
+  Dependent types can be used to ensure programs are correct by construction,
+  but they are not available in most
+  languages and adding them to an existing language is a difficult task.
+  This paper proposes a novel technique to write correct-by-construction
+  programs in languages without built-in verification
   capabilities.  This is achieved in three steps.  Firstly, we
-  shallowly embed the language (or its subset) into a
-  dependently-typed system.  Secondly, we write a program
+  give a shallow embedding of the language (or a subset) into a
+  dependently typed language.  Secondly, we write a program
   in that embedding, and we use dependent types to guarantee
   correctness properties of interest.  Thirdly, we
   translate the embedded program back into the original language,
   so that it can be used by the existing compilers and tools.
 
-  The main insight of the paper is the observation that de\-pen\-den\-tly-typed
-  languages that are equipped with reflection mecahnisms make it possible
-  to expres all the three steps in a single language.  Essentially,
-  this allows us to express programs, its formal properties and
-  compilers hand-in-hand, offering a lot of flexibility to programmers.
-
-  To demonstrate the approach precisely, we embed a subset of
-  the PostScript language in Agda.  We explain all the three
-  steps, illustrating them with several short examples.
+  Our main insight is that it is possible to
+  express all three steps in a single language, as long as it supports
+  both dependent types and reflection. Essentially,
+  this allows us to express a program, its formal properties, and
+  a compiler for it hand-in-hand, offering a lot of flexibility to programmers.
+  We demonstrate this three-step approach by embedding a subset of
+  the PostScript language in Agda, and illustrating it with several short examples.
+  Thus we use the power of reflection to bring the benefits of dependent types to languages
+  that had to go without them so far.
 
 
 %  Dependently-typed host languages empower users to verify a wide
