--- a/paper.tex
+++ b/paper.tex
@@ -105,12 +105,13 @@
 %% before \maketitle command
 \begin{abstract}
 
-  Dependent types can be used to ensure programs are correct by construction,
-  but they are not available in most
-  languages and adding them to an existing language is a difficult task.
-  This paper proposes a novel technique to write correct-by-construction
-  programs in languages without built-in verification
-  capabilities.  This is achieved in three steps.  Firstly, we
+  Most existing programming languages provde very little support to formally
+  state and prove properties about programs.  Adding such capabilities is far
+  from trivial, as it requires significant reengineering of the existing
+  compilers and tools.  This paper proposes a novel technique to write
+  correct-by-construction programs in languages without built-in verification
+  capabilities, maintaining the ability to use existing tools.
+  This is achieved in three steps.  Firstly, we
   give a shallow embedding of the language (or a subset) into a
   dependently typed language.  Secondly, we write a program
   in that embedding, and we use dependent types to guarantee
