Abstract typo + nitpicking

--- a/paper.tex
+++ b/paper.tex
@@ -105,9 +105,9 @@
 %% before \maketitle command
 \begin{abstract}
 
-  Most existing programming languages provde very little support to formally
+  Most existing programming languages provide little support to formally
   state and prove properties about programs.  Adding such capabilities is far
-  from trivial, as it requires significant reengineering of the existing
+  from trivial, as it requires significant re-engineering of the existing
   compilers and tools.  This paper proposes a novel technique to write
   correct-by-construction programs in languages without built-in verification
   capabilities, maintaining the ability to use existing tools.
