--- a/paper.tex
+++ b/paper.tex
@@ -106,7 +106,7 @@
 \begin{document}
 
 %% Title information
-\title[]{The Power of Dependent Reflection}
+\title[]{Extracting The Power of Dependent Types}
 
 
 %% Author with single affiliation.
