Commenting out fontenc

--- a/paper.tex
+++ b/paper.tex
@@ -32,7 +32,7 @@
 \usepackage{newunicodechar}
 \usepackage[final]{listings}
 
-\usepackage[T1]{fontenc}
+%\usepackage[T1]{fontenc}
 
 \newunicodechar{∷}{::}
 \newunicodechar{→}{\ensuremath{\to}}
