First version of section 5

--- a/paper.tex
+++ b/paper.tex
@@ -316,7 +316,7 @@ embedding, how to specify a program, and most importantly, program extraction.
 \input{latex/background}
 \input{latex/psembedding}
 \input{latex/extraction}
-
+\input{latex/reduction}
 
 
 \section{Scaling to Bigger Langauges}
